[gd_scene load_steps=18 format=3 uid="uid://c7458bypj6c24"]

[ext_resource type="Script" path="res://scripts/enemy_3.gd" id="1_a88g7"]
[ext_resource type="ArrayMesh" uid="uid://cxoo1u0uatgnh" path="res://assets/enemy/heavyDemon.obj" id="2_drkjj"]
[ext_resource type="AudioStream" uid="uid://c6vvbh86868nw" path="res://sounds/demonSounds.wav" id="3_sdy4v"]
[ext_resource type="PackedScene" uid="uid://cv5yh37vpvyt4" path="res://scenes/enemy_health_bar.tscn" id="4_kn2rq"]
[ext_resource type="Texture2D" uid="uid://b8oxua4rnl1xb" path="res://assets/world/white.png" id="5_yjki5"]
[ext_resource type="AudioStream" uid="uid://dluhp23fpkxov" path="res://sounds/demonDeath.wav" id="6_0lk8n"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ulfji"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qg1h1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0vukn"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Curve" id="Curve_8037b"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.684932, 0.56044), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_7g5rc"]
curve = SubResource("Curve_8037b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qmymk"]
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_max = 5.0
gravity = Vector3(0, 9.8, 0)
scale_curve = SubResource("CurveTexture_7g5rc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i1ccr"]
transparency = 1
albedo_color = Color(0.0846899, 0.0846899, 0.0846899, 1)
albedo_texture = ExtResource("5_yjki5")
emission_enabled = true
emission = Color(0.533324, 1.09497e-06, 2.88785e-07, 1)
emission_energy_multiplier = 5.0
billboard_mode = 2
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_0bjcj"]
material = SubResource("StandardMaterial3D_i1ccr")
size = Vector2(0.6, 0.6)

[sub_resource type="Animation" id="Animation_v10kd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.75, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_wa8hu"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.75, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(0, 1.5708, 0.261799), Vector3(0, 1.5708, 0.523599), Vector3(0, 1.5708, 0.785398), Vector3(0, 1.5708, 1.5708)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6mucg"]
_data = {
"RESET": SubResource("Animation_v10kd"),
"death": SubResource("Animation_wa8hu")
}

[node name="enemy" type="CharacterBody3D"]
script = ExtResource("1_a88g7")

[node name="hurtbox" type="Area3D" parent="." groups=["enemies", "enemy2"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hurtbox"]
transform = Transform3D(1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, 1.6, 0)
shape = SubResource("CapsuleShape3D_ulfji")

[node name="hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, 1.6, 0)
shape = SubResource("CapsuleShape3D_ulfji")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.17199e-06, 0, 0.9, 0, 0.72, 0, -0.6, 0, -3.25799e-06, 0, 0.75, 0)
mesh = ExtResource("2_drkjj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 1.37522, 0)
shape = SubResource("CapsuleShape3D_qg1h1")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.5

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00536871, 1.65249, -0.00183249)
stream = ExtResource("3_sdy4v")
volume_db = -2.0
unit_size = 1.0
pitch_scale = 1.3
autoplay = true

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="enemyHealthBar" parent="SubViewport" instance=ExtResource("4_kn2rq")]
max_value = 100.0
value = 100.0

[node name="HealthBar" type="Sprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 3.17082, 0)
texture = SubResource("ViewportTexture_0vukn")

[node name="stunTimer" type="Timer" parent="."]

[node name="demonDeath" type="GPUParticles3D" parent="."]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0.558476, 0)
emitting = false
amount = 32
lifetime = 0.4
one_shot = true
speed_scale = 1.2
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_qmymk")
draw_pass_1 = SubResource("QuadMesh_0bjcj")

[node name="demonHit" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7532, 0)
stream = ExtResource("6_0lk8n")
volume_db = -5.0
unit_size = 1.0
max_db = -5.0
pitch_scale = 1.2

[node name="deathSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7532, 0)
stream = ExtResource("6_0lk8n")
volume_db = -5.0
unit_size = 1.0
max_db = -5.0
pitch_scale = 0.7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6mucg")
}

[node name="iFrameTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="stunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="finished" from="demonDeath" to="." method="_on_demon_death_finished"]
[connection signal="timeout" from="iFrameTimer" to="." method="_on_i_frame_timer_timeout"]
